--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/Gladi023/team_profile_generator/issues"
   },
-  "homepage": "https://github.com/Gladi023/team_profile_generator#readme"
+  "homepage": "https://github.com/Gladi023/team_profile_generator#readme",
+  "devDependencies": {
+    "jest": "^28.1.1"
+  },
+  "dependencies": {
+    "inquirer": "^8.2.4"
+  }
 }
